auto-test/tests/chapter_18/invalid_types/invalid_struct_declaration/invalid_array_member.c
struct incomplete;

struct s {
  
  
  struct incomplete (*array_pointer)[3];
};